change in markup and style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 	padding: 45px 0 65px;
 	background-image: linear-gradient(rgba(218, 51, 45, 0.5),
 			rgba(218, 51, 45, 0.5)),
-		url('../images/layer.jpg');
+		url('../images/Layer.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
